[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/UIPane.gd" type="Script" id=1]
[ext_resource path="res://src/UI/AbilityScoresPanel.gd" type="Script" id=2]
[ext_resource path="res://src/UI/StatsPanel.gd" type="Script" id=3]
[ext_resource path="res://assets/art/ui/hand_right.png" type="Texture" id=4]
[ext_resource path="res://src/ThemeDefault.tres" type="Theme" id=5]
[ext_resource path="res://src/UI/ActionSelectPanel.gd" type="Script" id=6]

[node name="LeftPane" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_bottom = 430.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 853.0
alignment = 2

[node name="AbilityScoresPanel" type="PanelContainer" parent="VBox"]
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_top = 428.0
margin_right = 186.0
margin_bottom = 564.0
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="VBox/AbilityScoresPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 129.0

[node name="Stat1" type="HBoxContainer" parent="VBox/AbilityScoresPanel/VBox"]
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat1"]
margin_right = 10.0
margin_bottom = 17.0
rect_min_size = Vector2( 10, 0 )

[node name="StatLabel" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat1"]
margin_left = 14.0
margin_right = 79.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "PWR"
valign = 1

[node name="pad2" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat1"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )

[node name="Stat" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat1"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "85"
valign = 1

[node name="Stat2" type="HBoxContainer" parent="VBox/AbilityScoresPanel/VBox"]
margin_top = 21.0
margin_right = 172.0
margin_bottom = 38.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat2"]
margin_right = 10.0
margin_bottom = 17.0
rect_min_size = Vector2( 10, 0 )

[node name="StatLabel" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat2"]
margin_left = 14.0
margin_right = 79.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "AGI"
valign = 1

[node name="pad2" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat2"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )

[node name="Stat" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat2"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "85"
valign = 1

[node name="Stat3" type="HBoxContainer" parent="VBox/AbilityScoresPanel/VBox"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 59.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat3"]
margin_right = 10.0
margin_bottom = 17.0
rect_min_size = Vector2( 10, 0 )

[node name="StatLabel" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat3"]
margin_left = 14.0
margin_right = 79.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "END"
valign = 1

[node name="pad2" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat3"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )

[node name="Stat" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat3"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "85"
valign = 1

[node name="Stat4" type="HBoxContainer" parent="VBox/AbilityScoresPanel/VBox"]
margin_top = 63.0
margin_right = 172.0
margin_bottom = 80.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat4"]
margin_right = 10.0
margin_bottom = 17.0
rect_min_size = Vector2( 10, 0 )

[node name="StatLabel" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat4"]
margin_left = 14.0
margin_right = 79.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "INT"
valign = 1

[node name="pad2" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat4"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )

[node name="Stat" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat4"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "85"
valign = 1

[node name="Stat5" type="HBoxContainer" parent="VBox/AbilityScoresPanel/VBox"]
margin_top = 84.0
margin_right = 172.0
margin_bottom = 101.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat5"]
margin_right = 10.0
margin_bottom = 17.0
rect_min_size = Vector2( 10, 0 )

[node name="StatLabel" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat5"]
margin_left = 14.0
margin_right = 79.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "WIS"
valign = 1

[node name="pad2" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat5"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )

[node name="Stat" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat5"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "85"
valign = 1

[node name="Stat6" type="HBoxContainer" parent="VBox/AbilityScoresPanel/VBox"]
margin_top = 105.0
margin_right = 172.0
margin_bottom = 122.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat6"]
margin_right = 10.0
margin_bottom = 17.0
rect_min_size = Vector2( 10, 0 )

[node name="StatLabel" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat6"]
margin_left = 14.0
margin_right = 79.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "CHA"
valign = 1

[node name="pad2" type="Control" parent="VBox/AbilityScoresPanel/VBox/Stat6"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )

[node name="Stat" type="Label" parent="VBox/AbilityScoresPanel/VBox/Stat6"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "85"
valign = 1

[node name="ActionSelectPanel" type="PanelContainer" parent="VBox"]
margin_top = 568.0
margin_right = 186.0
margin_bottom = 674.0
script = ExtResource( 6 )

[node name="Actions" type="VBoxContainer" parent="VBox/ActionSelectPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 99.0

[node name="Slot1" type="HBoxContainer" parent="VBox/ActionSelectPanel/Actions"]
margin_right = 172.0
margin_bottom = 20.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot1"]
margin_right = 10.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="Selector" type="TextureRect" parent="VBox/ActionSelectPanel/Actions/Slot1"]
margin_left = 14.0
margin_right = 34.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource( 4 )
stretch_mode = 5

[node name="pad2" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot1"]
margin_left = 38.0
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="VBox/ActionSelectPanel/Actions/Slot1"]
margin_left = 62.0
margin_top = 1.0
margin_right = 172.0
margin_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "Action 1"
valign = 1

[node name="Slot2" type="HBoxContainer" parent="VBox/ActionSelectPanel/Actions"]
margin_top = 24.0
margin_right = 172.0
margin_bottom = 44.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot2"]
margin_right = 10.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="Selector" type="TextureRect" parent="VBox/ActionSelectPanel/Actions/Slot2"]
margin_left = 14.0
margin_right = 34.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource( 4 )
stretch_mode = 5

[node name="pad2" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot2"]
margin_left = 38.0
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="VBox/ActionSelectPanel/Actions/Slot2"]
margin_left = 62.0
margin_top = 1.0
margin_right = 172.0
margin_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "Action 2"
valign = 1

[node name="Slot3" type="HBoxContainer" parent="VBox/ActionSelectPanel/Actions"]
margin_top = 48.0
margin_right = 172.0
margin_bottom = 68.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot3"]
margin_right = 10.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="Selector" type="TextureRect" parent="VBox/ActionSelectPanel/Actions/Slot3"]
margin_left = 14.0
margin_right = 34.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource( 4 )
stretch_mode = 5

[node name="pad2" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot3"]
margin_left = 38.0
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="VBox/ActionSelectPanel/Actions/Slot3"]
margin_left = 62.0
margin_top = 1.0
margin_right = 172.0
margin_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "Action 3"
valign = 1

[node name="Slot4" type="HBoxContainer" parent="VBox/ActionSelectPanel/Actions"]
margin_top = 72.0
margin_right = 172.0
margin_bottom = 92.0
grow_horizontal = 2
alignment = 1

[node name="pad1" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot4"]
margin_right = 10.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="Selector" type="TextureRect" parent="VBox/ActionSelectPanel/Actions/Slot4"]
margin_left = 14.0
margin_right = 34.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource( 4 )
stretch_mode = 5

[node name="pad2" type="Control" parent="VBox/ActionSelectPanel/Actions/Slot4"]
margin_left = 38.0
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="VBox/ActionSelectPanel/Actions/Slot4"]
margin_left = 62.0
margin_top = 1.0
margin_right = 172.0
margin_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "Action 4"
valign = 1

[node name="ActionDescPanel" type="PanelContainer" parent="VBox"]
margin_top = 678.0
margin_right = 186.0
margin_bottom = 764.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBox/ActionDescPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 79.0
text = "Description of action. List Special Effects with a bit of flavor."
fit_content_height = true

[node name="StatsPanel" type="PanelContainer" parent="VBox"]
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_top = 768.0
margin_right = 186.0
margin_bottom = 841.0
size_flags_horizontal = 3
size_flags_vertical = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="VBox/StatsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 66.0

[node name="NameLabel" type="Label" parent="VBox/StatsPanel/VBox"]
margin_right = 172.0
margin_bottom = 17.0
grow_horizontal = 2
text = "Name"
align = 1

[node name="HP" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
margin_top = 21.0
margin_right = 172.0
margin_bottom = 38.0
alignment = 2

[node name="HpLabel" type="Label" parent="VBox/StatsPanel/VBox/HP"]
margin_left = 28.0
margin_right = 48.0
margin_bottom = 17.0
text = "hp"
align = 2
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="VBox/StatsPanel/VBox/HP"]
margin_left = 52.0
margin_right = 172.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
step = 1.0
value = 100.0

[node name="Stamina" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 59.0
alignment = 2

[node name="StamLabel" type="Label" parent="VBox/StatsPanel/VBox/Stamina"]
margin_left = 8.0
margin_right = 48.0
margin_bottom = 17.0
text = "stam"
align = 2
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="VBox/StatsPanel/VBox/Stamina"]
margin_left = 52.0
margin_right = 172.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
step = 1.0
value = 75.0

[node name="padding" type="Control" parent="VBox"]
margin_top = 845.0
margin_right = 186.0
margin_bottom = 846.0
rect_min_size = Vector2( 0, 1 )
